force-app/main/default/objects/Claim__c/fields/AmountUnderDisputeBRL__c.field-meta.xml
<CustomField>
    <fullName>AmountUnderDisputeBRL__c</fullName>
    <label>Amount under dispute (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>