force-app/main/default/objects/Claim__c/fields/AmountUnderDisputeSum__c.field-meta.xml
<CustomField>
    <fullName>AmountUnderDisputeSum__c</fullName>
    <label>Amount under dispute sum (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>