force-app/main/default/objects/Claim__c/fields/AmountUnderDisputeUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountUnderDisputeUSD__c</fullName>
    <label>Amount under dispute (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>