force-app/main/default/objects/Claim__c/fields/Backcharge__c.field-meta.xml
<CustomField>
    <fullName>Backcharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backcharge</label>
    <referenceTo>Backcharge__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>