force-app/main/default/objects/Claim__c/fields/BOM__c.field-meta.xml
<CustomField>
    <fullName>BOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM</label>
    <referenceTo>BOM__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>