force-app/main/default/objects/Claim__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Backcharge</fullName>
            </value>
            <value>
                <fullName>Change in Law</fullName>
            </value>
            <value>
                <fullName>Loss and Damage</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Rate reduction</fullName>
            </value>
            <value>
                <fullName>Reimbursement of additional expense</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>