force-app/main/default/objects/Claim__c/fields/FinancialStatus__c.field-meta.xml
<CustomField>
    <fullName>FinancialStatus__c</fullName>
    <label>Financial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Charged and accrued</fullName>
            </value>
            <value>
                <fullName>Charged and not accrued</fullName>
            </value>
            <value>
                <fullName>Not charged and accrued</fullName>
            </value>
            <value>
                <fullName>Not charged and not accrued</fullName>
            </value>
            <value>
                <fullName>Not paid and accrued</fullName>
            </value>
            <value>
                <fullName>Not paid and not accrued</fullName>
            </value>
            <value>
                <fullName>Paid and accrued</fullName>
            </value>
            <value>
                <fullName>Paid and not accrued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>