force-app/main/default/objects/Claim__c/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter</label>
    <referenceTo>Letter__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>