force-app/main/default/objects/Claim__c/fields/LetterGroup__c.field-meta.xml
<CustomField>
    <fullName>LetterGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter Group</label>
    <referenceTo>LetterGroup__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>