force-app/main/default/objects/Claim__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Penalty</label>
    <referenceTo>Penalty__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>