force-app/main/default/objects/Claim__c/fields/PS__c.field-meta.xml
<CustomField>
    <fullName>PS__c</fullName>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discussion with client</fullName>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
            <value>
                <fullName>External (Lawsuit)</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Waiting client&apos;s feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>