force-app/main/default/objects/Claim__c/fields/RDO__c.field-meta.xml
<CustomField>
    <fullName>RDO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RDO</label>
    <referenceTo>RDO__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>