force-app/main/default/objects/Claim__c/fields/ResultsBRL__c.field-meta.xml
<CustomField>
    <fullName>ResultsBRL__c</fullName>
    <label>Results (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>