force-app/main/default/objects/Claim__c/fields/ResultsSum__c.field-meta.xml
<CustomField>
    <fullName>ResultsSum__c</fullName>
    <label>Results sum (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>