force-app/main/default/objects/Claim__c/fields/ResultsUSD__c.field-meta.xml
<CustomField>
    <fullName>ResultsUSD__c</fullName>
    <label>Results (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>