force-app/main/default/objects/Claim__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(ISBLANK(StartDate__c), &apos;Building&apos;, 
			IF( AND(NOT(ISBLANK(StartDate__c)), NOT(ISBLANK(EndDate__c))), &apos;Closed&apos; , &apos;Ongoing&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>