force-app/main/default/objects/Claim__c/fields/TotalAmountSum__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountSum__c</fullName>
    <label>Total amount sum (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>