force-app/main/default/objects/Claim__c/fields/TotalAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountUSD__c</fullName>
    <label>Total amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>