force-app/main/default/objects/Claim__c/fields/VesselContract__c.field-meta.xml
<CustomField>
    <fullName>VesselContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel Contract</label>
    <referenceTo>VesselContract__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>