force-app/main/default/objects/Claim__c/recordTypes/Backcharge.recordType-meta.xml
<RecordType>
    <fullName>Backcharge</fullName>
    <active>false</active>
    <label>Backcharge</label>
</RecordType>