force-app/main/default/objects/Claim__c/recordTypes/BOM.recordType-meta.xml
<RecordType>
    <fullName>BOM</fullName>
    <active>false</active>
    <label>BOM</label>
</RecordType>