force-app/main/default/objects/Claim__c/recordTypes/Letter.recordType-meta.xml
<RecordType>
    <fullName>Letter</fullName>
    <active>false</active>
    <label>Letter</label>
</RecordType>