force-app/main/default/objects/Claim__c/recordTypes/OccurrenceGroup.recordType-meta.xml
<RecordType>
    <fullName>OccurrenceGroup</fullName>
    <active>false</active>
    <label>Occurrence Group</label>
</RecordType>