force-app/main/default/objects/Claim__c/recordTypes/Penalty.recordType-meta.xml
<RecordType>
    <fullName>Penalty</fullName>
    <active>false</active>
    <label>Penalty</label>
</RecordType>