force-app/main/default/objects/Claim__c/recordTypes/RDO.recordType-meta.xml
<RecordType>
    <fullName>RDO</fullName>
    <active>false</active>
    <label>RDO</label>
</RecordType>