force-app/main/default/objects/Claim__c/recordTypes/VesselContract.recordType-meta.xml
<RecordType>
    <fullName>VesselContract</fullName>
    <active>false</active>
    <label>Vessel Contract</label>
</RecordType>