force-app/main/default/objects/Claim__c/validationRules/BlockFutureEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockFutureEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(
		   ISCHANGED(EndDate__c), 		  
				 EndDate__c &gt;  TODAY() 
)</errorConditionFormula>
    <errorMessage>The &quot;End Date&quot; field must be today or earlier.</errorMessage>
</ValidationRule>