force-app/main/default/objects/Claim__c/listViews/MV15.listView-meta.xml
<ListView>
    <fullName>MV15</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>AmountUnderDisputeBRL__c</columns>
    <columns>ResultsBRL__c</columns>
    <columns>AmountUnderDisputeUSD__c</columns>
    <columns>ResultsUSD__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV15</value>
    </filters>
    <label>MV15</label>
</ListView>