force-app/main/default/objects/Claim__c/listViews/MV18.listView-meta.xml
<ListView>
    <fullName>MV18</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>AmountUnderDisputeBRL__c</columns>
    <columns>ResultsBRL__c</columns>
    <columns>AmountUnderDisputeUSD__c</columns>
    <columns>ResultsUSD__c</columns>
    <columns>Status__c</columns>
    <columns>ResultsSum__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV18</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ongoing</value>
    </filters>
    <label>MV18</label>
</ListView>