force-app/main/default/objects/Claim__c/listViews/MV22_Opened.listView-meta.xml
<ListView>
    <fullName>MV22_Opened</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Category__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>AmountUnderDisputeSum__c</columns>
    <columns>Status__c</columns>
    <columns>ResultsSum__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV22</value>
    </filters>
    <filters>
        <field>PS__c</field>
        <operation>equals</operation>
        <value>Discussion with client,Dynamic,Waiting client&apos;s feedback</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ongoing</value>
    </filters>
    <label>MV22 Opened</label>
</ListView>