force-app/main/default/objects/Claim__c/listViews/MV26.listView-meta.xml
<ListView>
    <fullName>MV26</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Category__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>AmountUnderDisputeSum__c</columns>
    <columns>PS__c</columns>
    <columns>Status__c</columns>
    <columns>ResultsSum__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV26</value>
    </filters>
    <label>MV26</label>
</ListView>