force-app/main/default/objects/Claim__c/listViews/MV27.listView-meta.xml
<ListView>
    <fullName>MV27</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>AmountUnderDisputeBRL__c</columns>
    <columns>AmountUnderDisputeUSD__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV27</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>MV27 (Open/Building)</label>
</ListView>