force-app/main/default/objects/Claim__c/listViews/MV27_Todos.listView-meta.xml
<ListView>
    <fullName>MV27_Todos</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>AmountUnderDisputeBRL__c</columns>
    <columns>ResultsBRL__c</columns>
    <columns>AmountUnderDisputeUSD__c</columns>
    <columns>ResultsUSD__c</columns>
    <columns>Status__c</columns>
    <columns>AmountUnderDisputeSum__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV27</value>
    </filters>
    <label>MV27 Todos</label>
</ListView>